--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,22 +6,22 @@
             </span>
             <div class="languages">
                 <a class="active" href="#">
-                    <img src="/assets/img/gb.svg" height="15" width="20" alt="english">
+                    <img src="assets/img/gb.svg" height="15" width="20" alt="english">
                 </a>
                 <a href="#">
-                    <img src="/assets/img/it.svg" height="15" width="20" alt="italian">
+                    <img src="assets/img/it.svg" height="15" width="20" alt="italian">
                 </a>
                 <a href="#">
-                    <img src="/assets/img/de.svg" height="15" width="20" alt="german">
+                    <img src="assets/img/de.svg" height="15" width="20" alt="german">
                 </a>
                 <a href="#">
-                    <img src="/assets/img/fr.svg" height="15" width="20" alt="french">
+                    <img src="assets/img/fr.svg" height="15" width="20" alt="french">
                 </a>
                 <a href="#">
-                    <img src="/assets/img/es.svg" height="15" width="20" alt="spanish">
+                    <img src="assets/img/es.svg" height="15" width="20" alt="spanish">
                 </a>
                 <a href="#">
-                    <img src="/assets/img/ru.svg" height="15" width="20" alt="russian">
+                    <img src="assets/img/ru.svg" height="15" width="20" alt="russian">
                 </a>
             </div>
         </div>
@@ -29,7 +29,7 @@
     <div class="bottom">
         <div class="container">
             <div class="logo">
-                <img src="/assets/img/logo.png" alt="Faraon logo" height="60">
+                <img src="assets/img/logo.png" alt="Faraon logo" height="60">
             </div>
             <nav>
                 <a href="/excursions">
